@@ -1,6 +1,7 @@
 --- CHANGELOG ---
 --- PyFMI-FUTURE ---
     * Fixed a caching issue in ResultDymolaBinary.get_variables_data().
+    * Removed deprecation of `get_variable_data`, it is recommended to use `get_trajectory` anyways.
 
 --- PyFMI-2.18.0 ---
     * Added new class `DynamicDiagnosticsUtils` in `pyfmi.common.diagnostics` providing
